[gd_scene load_steps=6 format=3 uid="uid://bcstdj4w3pdmk"]

[ext_resource type="Script" path="res://Scrips/Weapon_Logic/Weapon_melee.gd" id="2"]

[sub_resource type="CapsuleShape2D" id="1"]
radius = 57.0
height = 358.0

[sub_resource type="Animation" id="Animation_oykhd"]
resource_name = "MeleeAttack"
length = 0.35
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.02, 0.06, 0.1, 0.12, 0.16, 0.18, 0.2, 0.24, 0.28, 0.3, 0.32),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-0.15708, 0.0, 0.523599, 1.39626, 1.5708, 1.74533, 1.39626, 0.785398, 0.0, -0.261799, 0.0]
}

[sub_resource type="Animation" id="Animation_5aurl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.15708]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3htt7"]
_data = {
"MeleeAttack": SubResource("Animation_oykhd"),
"RESET": SubResource("Animation_5aurl")
}

[node name="Melee" type="Node2D"]
script = ExtResource("2")

[node name="Pivot" type="Marker2D" parent="."]
rotation = -0.15708

[node name="Sprite2D" type="Sprite2D" parent="Pivot"]

[node name="AreaForHits" type="Area2D" parent="Pivot" groups=["Weapon"]]
position = Vector2(0, -50)

[node name="Hitbox" type="CollisionShape2D" parent="Pivot/AreaForHits"]
modulate = Color(0.109804, 0.227451, 1, 1)
shape = SubResource("1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3htt7")
}

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Pivot/AreaForHits" to="." method="Attacked_subject_check"]
